# plotml

./: .clang-format  .gitmodules  CMakeLists.txt  Doxyfile.in
cmake/: FindCodeSynthesisXSD.cmake
plotml/: CMakeLists.txt  config.hpp.in  plotml-config.cmake.in  plotml.hpp  plotml.xsd.in  plotml_validate.cpp  xsdcxx-options.in
plotml_testing/: CMakeLists.txt  read_curve_test.cpp  test_config.hpp.in  test_macros.hpp  write_curve_test.cpp
plotml_testing/data/: curve1.xml
